--- a/HsHnApp/www/css/index.css
+++ b/HsHnApp/www/css/index.css
@@ -1,55 +1,85 @@
 ﻿body {
 }
 
+.popoversw {
+    z-index: 10000;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background-color: white;
+    margin: 10px;
+    width: 90%;
+    height: 90%;
+    border: 1px solid grey;
+    box-shadow: 1px 1px 4px black;
+}
+
+.displayInline {
+    display: inline-block;
+    margin: 4px;
+}
+
+.mapDefaults {
+    width: 100%;
+    height: 350px;
+    padding: 10px;
+}
+
 #karte {
     width: 100%;
     height: 350px;
-    padding:10px;
-    border:1px solid grey;
+    padding: 10px;
+    border: 1px solid grey;
 }
+
 html, body {
-  height: 100%;
+    height: 100%;
 }
+
 body {
-  padding: 80px 0 0 0;
+    padding: 80px 0 0 0;
 }
 
 .navmenu {
-  padding-top: 50px;
+    padding-top: 50px;
 }
 
 .navbar {
-  display: block;
-  text-align: center;
+    display: block;
+    text-align: center;
 }
+
 .navbar-brand {
-  display: inline-block;
-  float: none;
+    display: inline-block;
+    float: none;
 }
+
 .navbar-toggle {
-  position: absolute;
-  float: left;
-  margin-left: 15px;
+    position: absolute;
+    float: left;
+    margin-left: 15px;
 }
 
 .container {
-  max-width: 100%;
+    max-width: 100%;
 }
 
 @media (min-width: 1px) {
-  .navbar-toggle {
-    display: block !important;
-  }
+    .navbar-toggle {
+        display: block !important;
+    }
 }
 
 @media (min-width: 992px) {
-  body {
-    padding: 0 0 0 300px;
-  }
-  .navmenu {
-    padding-top: 0;
-  }
-  .navbar {
-    display: none !important; /* IE8 fix */
-  }
+    body {
+        padding: 0 0 0 300px;
+    }
+
+    .navmenu {
+        padding-top: 0;
+    }
+
+    .navbar {
+        display: none !important; /* IE8 fix */
+    }
 }
