--- a/HsHnApp/www/css/index.css
+++ b/HsHnApp/www/css/index.css
@@ -3,7 +3,7 @@
 
 .popoversw {
     z-index: 10000;
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 0px;
     background-color: white;
@@ -20,9 +20,9 @@
 }
 
 .mapDefaults {
-    width: 100%;
-    height: 350px;
-    padding: 10px;
+    width: 90%;
+    height: 450px;
+    margin: 10px;
 }
 
 #karte {
