--- a/HsHnApp/www/scripts/View/Standorte.html
+++ b/HsHnApp/www/scripts/View/Standorte.html
@@ -1,5 +1,6 @@
 ﻿<center><h4>HSHN Standorte</h4></center>
 <hr />
+<!-- JSON Array wird jedes element rausgepickt und in die Elemente eingefügt-->
 <div ng-repeat="standort in Standorte">
 
     <div class="panel panel-primary">
